--- a/src/content/lessons/backend/autenticacao-jwt.mdx
+++ b/src/content/lessons/backend/autenticacao-jwt.mdx
@@ -855,3 +855,11 @@ INFRAESTRUTURA
   ✓ Secrets gerenciados por vault, não em variáveis de ambiente hardcoded
   ✓ Logs de autenticação para auditoria (sem logar tokens ou senhas)
 ```
+
+---
+
+## Referencias e Fontes
+
+- **RFC 7519 (JWT)** — https://datatracker.ietf.org/doc/html/rfc7519 — Especificacao formal do JSON Web Token, definindo estrutura, claims e assinatura
+- **RFC 6749 (OAuth 2.0)** — https://datatracker.ietf.org/doc/html/rfc6749 — Framework de autorizacao OAuth 2.0, base para flows de autenticacao modernos
+- **OWASP Authentication Cheat Sheet** — https://cheatsheetseries.owasp.org/cheatsheets/Authentication_Cheat_Sheet.html — Guia de boas praticas de autenticacao, incluindo armazenamento de senhas e protecao contra ataques
