--- a/src/content/lessons/backend/cluster.mdx
+++ b/src/content/lessons/backend/cluster.mdx
@@ -565,3 +565,10 @@ Pergunta: "Preciso de mais throughput na minha API Node.js"
    → execFile() para operações curtas sem shell
    → NUNCA exec() com input de usuário
 ```
+
+---
+
+## Referencias e Fontes
+
+- **Node.js Cluster Documentation** — https://nodejs.org/api/cluster.html — Documentacao oficial sobre o modulo cluster para escalar processos Node.js
+- **PM2 Documentation** — https://pm2.keymetrics.io/docs — Gerenciador de processos para Node.js em producao, com suporte a cluster mode e monitoramento
