--- a/src/content/lessons/backend/go-fundamentos.mdx
+++ b/src/content/lessons/backend/go-fundamentos.mdx
@@ -1370,3 +1370,11 @@ Go é uma linguagem que troca expressividade por **clareza, performance e produt
 5. **Toolchain integrada** elimina debates de formatação (`go fmt`), detecta bugs (`go vet`, `-race`), e empacota tudo em um binário estático
 6. **Standard library robusta** — `net/http`, `encoding/json`, `database/sql`, `context`, `testing` cobrem a maioria dos cenários sem dependências externas
 7. **Simplicidade como feature** — a ausência de features (ternários, generics até 1.18, exceptions) é intencional; código Go é previsível e legível por qualquer membro da equipe
+
+---
+
+## Referencias e Fontes
+
+- **"The Go Programming Language"** — Alan Donovan, Brian Kernighan — Livro definitivo sobre a linguagem Go, cobrindo fundamentos, concorrencia e design idiomatico
+- **Go Documentation** — https://go.dev/doc — Documentacao oficial da linguagem, incluindo tutoriais e especificacao
+- **Go by Example** — https://gobyexample.com — Exemplos praticos e anotados de cada conceito da linguagem Go
