--- a/src/content/lessons/backend/graphql.mdx
+++ b/src/content/lessons/backend/graphql.mdx
@@ -6,7 +6,7 @@ order: 21
 section: "Escalabilidade"
 priority: "medium"
 tags: ["graphql", "api", "schema", "resolvers", "dataloader", "federation", "apollo"]
-prerequisites: ["rest-apis", "problema-n-plus-1"]
+prerequisites: ["rest-apis", "indices-e-performance"]
 keyTakeaways:
   - "GraphQL é uma query language para APIs com um type system — o cliente pede exatamente os campos que precisa, eliminando over-fetching e under-fetching"
   - "O schema é o contrato: define types, queries, mutations e subscriptions com tipagem forte e introspecção automática"
