--- a/src/content/lessons/backend/message-queues.mdx
+++ b/src/content/lessons/backend/message-queues.mdx
@@ -972,3 +972,11 @@ DECISÃO RÁPIDA
   "Preciso garantir que consumer não duplique processamento"
   → Idempotent consumer pattern (dedup key + upsert)
 ```
+
+---
+
+## Referencias e Fontes
+
+- **RabbitMQ Documentation** — https://www.rabbitmq.com/docs — Documentacao oficial do RabbitMQ, cobrindo exchanges, queues, bindings e patterns de mensageria
+- **Apache Kafka Documentation** — https://kafka.apache.org/documentation/ — Documentacao oficial do Kafka, incluindo arquitetura, consumers, producers e Kafka Streams
+- **"Designing Data-Intensive Applications"** — Martin Kleppmann — Analise aprofundada de sistemas de mensageria, log-based messaging e garantias de entrega
