--- a/src/content/lessons/backend/nosql.mdx
+++ b/src/content/lessons/backend/nosql.mdx
@@ -595,3 +595,12 @@ Arquitetura real de um e-commerce:
 A chave é **não usar um martelo para tudo**. Cada banco NoSQL é otimizado para
 um conjunto específico de access patterns. Escolha com base nos seus requisitos
 de consistência, latência, throughput e complexidade de queries — não por hype.
+
+---
+
+## Referencias e Fontes
+
+- **"Designing Data-Intensive Applications"** — Martin Kleppmann — Analise detalhada de modelos de dados NoSQL, replicacao, particionamento e trade-offs de consistencia
+- **MongoDB Documentation** — https://www.mongodb.com/docs/ — Documentacao oficial do MongoDB, incluindo modelagem de documentos e agregacoes
+- **Redis Documentation** — https://redis.io/docs/ — Documentacao oficial do Redis, cobrindo estruturas de dados, persistencia e casos de uso
+- **Amazon DynamoDB Documentation** — https://docs.aws.amazon.com/dynamodb/ — Documentacao oficial do DynamoDB, incluindo modelagem single-table e provisioning de capacidade
