--- a/src/content/lessons/backend/rest-apis.mdx
+++ b/src/content/lessons/backend/rest-apis.mdx
@@ -830,3 +830,11 @@ Uma API REST de qualidade de produção implementa, no mínimo:
 10. **Versionamento** explícito desde a primeira versão pública
 11. **Especificação OpenAPI** como source of truth do contrato
 12. **CORS** correctamente configurado para clientes browser
+
+---
+
+## Referencias e Fontes
+
+- **"RESTful Web APIs"** — Leonard Richardson, Mike Amundsen — Guia completo sobre design de APIs RESTful, abordando hypermedia e boas práticas
+- **RFC 7231** — https://datatracker.ietf.org/doc/html/rfc7231 — Especificacao dos metodos e semantica HTTP/1.1
+- **OpenAPI Specification** — https://spec.openapis.org/oas/latest.html — Padrao para descricao de APIs REST, utilizado como contrato entre frontend e backend
