--- a/src/content/lessons/backend/sql-modelagem.mdx
+++ b/src/content/lessons/backend/sql-modelagem.mdx
@@ -847,3 +847,10 @@ CREATE TABLE usuario_tags (
 9. JSONB para dados semi-estruturados — EAV nunca
 10. Nomes de constraints explícitos para facilitar debugging em produção
 ```
+
+---
+
+## Referencias e Fontes
+
+- **"Designing Data-Intensive Applications"** — Martin Kleppmann — Referencia fundamental sobre modelagem de dados, trade-offs de consistencia e sistemas distribuidos
+- **PostgreSQL Documentation** — https://www.postgresql.org/docs/ — Documentacao oficial do PostgreSQL, incluindo tipos de dados, constraints, indices e otimizacao de queries
