--- a/src/content/lessons/backend/streams.mdx
+++ b/src/content/lessons/backend/streams.mdx
@@ -752,3 +752,10 @@ Pergunta: "Devo usar streams ou carregar tudo na memória?"
    → SEMPRE pipeline(). Sem exceção.
    → .pipe() não faz cleanup em caso de erro = leak de memória/file descriptors
 ```
+
+---
+
+## Referencias e Fontes
+
+- **Node.js Streams Documentation** — https://nodejs.org/api/stream.html — Documentacao oficial sobre Readable, Writable, Transform e pipeline
+- **"Node.js Design Patterns"** — Mario Casciaro, Luciano Mammino — Cobertura detalhada de Streams, backpressure e patterns de composicao
