--- a/src/content/lessons/backend/testes.mdx
+++ b/src/content/lessons/backend/testes.mdx
@@ -863,3 +863,11 @@ test('incrementa de novo', () => { let counter = 0; counter++; expect(counter).t
 Testes são **infraestrutura de confiança**. Uma suíte que é ignorada porque
 "sempre tem um teste falhando" é pior que não ter testes — ela dá falsa
 segurança enquanto esconde bugs reais.
+
+---
+
+## Referencias e Fontes
+
+- **"xUnit Test Patterns"** — Gerard Meszaros — Catalogo completo de patterns e anti-patterns para testes automatizados
+- **Jest Documentation** — https://jestjs.io/docs/getting-started — Documentacao oficial do Jest, framework de testes para JavaScript e TypeScript
+- **Pact Documentation** — https://docs.pact.io/ — Documentacao oficial do Pact, ferramenta de contract testing para integracao entre servicos
