--- a/src/content/lessons/backend/transacoes.mdx
+++ b/src/content/lessons/backend/transacoes.mdx
@@ -1068,3 +1068,10 @@ FROM pg_replication_slots;
 │ anomalias possíveis             │                                           │
 └─────────────────────────────────┴───────────────────────────────────────────┘
 ```
+
+---
+
+## Referencias e Fontes
+
+- **"Designing Data-Intensive Applications"** — Martin Kleppmann — Cobertura profunda de niveis de isolamento, anomalias de concorrencia e trade-offs de consistencia
+- **PostgreSQL Documentation — Transaction Isolation** — https://www.postgresql.org/docs/current/transaction-iso.html — Documentacao oficial sobre isolamento de transacoes, MVCC e comportamento especifico do PostgreSQL
