--- a/src/content/lessons/cs/big-o-notation.mdx
+++ b/src/content/lessons/cs/big-o-notation.mdx
@@ -2,11 +2,11 @@
 title: "Notação Assintótica (Big O)"
 description: "Análise formal de complexidade algorítmica: Big O, Omega, Theta, Master Theorem, análise amortizada e os limites da teoria na prática"
 track: "cs"
-order: 6
+order: 3
 section: "Fundamentos da Computação"
 priority: "high"
 tags: ["big-o", "complexidade", "algoritmos", "performance", "análise", "master-theorem", "amortizada"]
-prerequisites: ["logaritmos-e-algebra"]
+prerequisites: ["fundamentos-matematicos"]
 keyTakeaways:
   - "Big O é uma definição matemática formal: f(n) = O(g(n)) ⟺ ∃c>0, n₀>0 tal que f(n) ≤ c·g(n) ∀n≥n₀"
   - "Existem três notações assintóticas: O (upper bound), Ω (lower bound) e Θ (tight bound)"
