--- a/src/content/lessons/cs/stacks-e-queues.mdx
+++ b/src/content/lessons/cs/stacks-e-queues.mdx
@@ -2,7 +2,7 @@
 title: "Stacks e Queues"
 description: "Pilhas (LIFO) e Filas (FIFO): análise formal como ADTs, implementações internas, heaps, priority queues e aplicações reais em sistemas"
 track: "cs"
-order: 9
+order: 6
 section: "Estruturas de Dados"
 priority: "high"
 tags: ["stack", "queue", "LIFO", "FIFO", "estruturas-de-dados", "heap", "priority-queue", "deque"]
@@ -855,3 +855,12 @@ Cada elemento entra e sai do deque no máximo uma vez → **O(n) total**.
 - **Deque**: sliding window problems, work-stealing schedulers, undo/redo bidirecional
 - **Priority Queue (Heap)**: Dijkstra, A*, scheduling com prioridades, merge de k listas ordenadas, mediana em streaming
 - **Monotonic Stack/Deque**: next greater/smaller element, sliding window min/max, histograma (largest rectangle)
+
+---
+
+## Referências
+
+- **Introduction to Algorithms (CLRS)** — Cormen, Leiserson, Rivest, Stein. Capítulo 10 (Elementary Data Structures — stacks, queues) e Capítulo 6 (Heapsort — binary heaps)
+- **Algorithms** — Robert Sedgewick & Kevin Wayne. Capítulo 1.3 (Bags, Queues, and Stacks) e Capítulo 2.4 (Priority Queues)
+- **"Dijkstra's Algorithm Revisited: The Dynamic Alternative"** — para aplicações de priority queues em shortest path
+- **Node.js Event Loop Documentation** — [https://nodejs.org/en/learn/asynchronous-work/event-loop-timers-and-nexttick](https://nodejs.org/en/learn/asynchronous-work/event-loop-timers-and-nexttick)
