--- a/src/content/lessons/cs/trees.mdx
+++ b/src/content/lessons/cs/trees.mdx
@@ -2,7 +2,7 @@
 title: "Trees (Árvores)"
 description: "Estruturas hierárquicas, BSTs, árvores balanceadas, B-Trees, Tries e Segment Trees: a espinha dorsal de bancos de dados, compiladores e sistemas de busca"
 track: "cs"
-order: 11
+order: 8
 section: "Estruturas de Dados"
 priority: "high"
 tags: ["trees", "BST", "estruturas-de-dados", "binary-search-tree", "índices", "AVL", "red-black-tree", "B-tree", "trie", "segment-tree"]
@@ -864,3 +864,13 @@ Internamente, **ext4** usa **HTrees** (variante de B-Tree com hash) para indexar
 > **m** = comprimento da string; **Σ** = tamanho do alfabeto; **n** = número de elementos.
 
 **Ponto crucial para entrevistas:** sempre discuta a **altura** da árvore. A complexidade de BST é O(h), não O(log n) — só é O(log n) se a árvore for balanceada. Essa distinção demonstra profundidade técnica.
+
+---
+
+## Referências e Fontes
+
+- **"Introduction to Algorithms"** (CLRS) — Cormen, Leiserson, Rivest, Stein — capítulos 12-14 (BST, Red-Black Trees, Augmenting Data Structures)
+- **"The Art of Computer Programming, Vol. 3"** — Donald Knuth — análise detalhada de árvores de busca
+- **"Database Internals"** — Alex Petrov — B-Trees e LSM-Trees no contexto de storage engines
+- **MIT 6.006 Introduction to Algorithms** — aulas sobre BST e balanced BSTs
+- **Visualgo** — https://visualgo.net/en/bst — visualização interativa de operações em árvores
