--- a/src/content/lessons/frontend/bundlers.mdx
+++ b/src/content/lessons/frontend/bundlers.mdx
@@ -2,7 +2,7 @@
 title: "Bundlers e Build Tools"
 description: "Webpack, Vite, esbuild, Rollup e Turbopack: module bundling, code splitting, tree shaking, hot module replacement e o ecossistema moderno de build"
 track: "frontend"
-order: 18
+order: 12
 section: "Qualidade e Performance"
 priority: "medium"
 tags: ["bundler", "webpack", "vite", "esbuild", "rollup", "code-splitting", "tree-shaking", "HMR"]
@@ -317,3 +317,13 @@ build: {
 - **Rollup Documentation** — bundling para libraries
 - **"Module Bundlers Explained"** (Fireship) — overview visual dos conceitos
 - **web.dev: Code Splitting** — guia do Google sobre code splitting e lazy loading
+
+---
+
+## Referencias e Fontes
+
+- **Webpack Documentation** — https://webpack.js.org — Documentacao oficial do Webpack com referencia completa de loaders, plugins, otimizacao e configuracao avancada
+- **Vite Documentation** — https://vitejs.dev — Documentacao oficial do Vite cobrindo configuracao, plugins, HMR e build de producao com Rollup
+- **esbuild Documentation** — https://esbuild.github.io — Documentacao do esbuild, bundler extremamente rapido escrito em Go, com API de transformacao e build
+- **Rollup Documentation** — https://rollupjs.org — Documentacao oficial do Rollup, bundler focado em tree-shaking e output otimizado para bibliotecas
+- **"Webpack Academy"** — Recurso educacional dedicado a entender Webpack em profundidade, desde conceitos basicos ate configuracoes avancadas de producao
