--- a/src/content/lessons/frontend/como-browser-funciona.mdx
+++ b/src/content/lessons/frontend/como-browser-funciona.mdx
@@ -813,3 +813,11 @@ GPU Process + Compositor Thread
 ```
 
 A chave para performance é entender **qual parte do pipeline** cada mudança afeta, e minimizar o trabalho nas etapas mais caras (layout e paint), favorecendo propriedades que só precisam de compositing.
+
+---
+
+## Referencias e Fontes
+
+- **"High Performance Browser Networking"** — Ilya Grigorik — Referencia completa sobre como navegadores lidam com redes, conexoes, protocolos e otimizacao de performance web
+- **Web.dev** — https://web.dev — Guias do Google sobre metricas de performance, rendering, Core Web Vitals e boas praticas para a web moderna
+- **MDN Web Docs** — https://developer.mozilla.org — Documentacao detalhada sobre APIs do navegador, ciclo de rendering, DOM, CSSOM e todos os fundamentos da plataforma web
