--- a/src/content/lessons/frontend/html-semantico.mdx
+++ b/src/content/lessons/frontend/html-semantico.mdx
@@ -662,3 +662,11 @@ customElements.define('user-card', UserCard);
 ```
 
 A combinação de HTML semântico, acessibilidade, SEO técnico e componentes nativos forma a fundação sobre a qual todo framework (React, Vue, Svelte) é construído. Dominar esses fundamentos torna você capaz de diagnosticar problemas que nenhum framework consegue abstrair.
+
+---
+
+## Referencias e Fontes
+
+- **MDN HTML Elements Reference** — https://developer.mozilla.org/en-US/docs/Web/HTML/Element — Referencia completa de todos os elementos HTML, seus atributos e semantica correta
+- **W3C HTML Specification** — https://html.spec.whatwg.org — Especificacao oficial do HTML mantida pelo WHATWG, a fonte definitiva sobre o comportamento esperado de cada elemento
+- **Web.dev Accessibility Guides** — https://web.dev/accessibility — Guias praticos do Google sobre acessibilidade web, ARIA, roles e como construir interfaces inclusivas
