--- a/src/content/lessons/frontend/nextjs.mdx
+++ b/src/content/lessons/frontend/nextjs.mdx
@@ -2,7 +2,7 @@
 title: "Next.js — SSR, SSG e Full-Stack React"
 description: "App Router, Server Components, SSR, SSG, ISR, API Routes, middleware, caching, deploy e as decisões arquiteturais para aplicações React em produção"
 track: "frontend"
-order: 14
+order: 10
 section: "Frameworks"
 priority: "high"
 tags: ["nextjs", "react", "ssr", "ssg", "server-components", "app-router", "full-stack"]
@@ -1708,3 +1708,11 @@ Onde deployar?
    Causa: cookies(), headers() ou searchParams usados na rota
    Fix: mover a lógica dinâmica para dentro de Suspense (PPR) ou aceitar SSR
 ```
+
+---
+
+## Referencias e Fontes
+
+- **Next.js Official Documentation** — https://nextjs.org/docs — Documentacao oficial cobrindo App Router, Server Components, data fetching, caching e todas as APIs do framework
+- **Vercel Blog** — https://vercel.com/blog — Artigos tecnicos da equipe por tras do Next.js sobre arquitetura, performance, edge computing e novas features do framework
+- **"Next.js in Action"** — Guia pratico e aprofundado sobre desenvolvimento de aplicacoes com Next.js, incluindo padroes de arquitetura, deploy e otimizacao
