--- a/src/content/lessons/frontend/testes-frontend.mdx
+++ b/src/content/lessons/frontend/testes-frontend.mdx
@@ -2,11 +2,11 @@
 title: "Testes no Frontend"
 description: "Vitest, Testing Library, testes de componente, mocking, testes de integração, E2E com Playwright e estratégias para frontends testáveis"
 track: "frontend"
-order: 17
+order: 11
 section: "Qualidade e Performance"
 priority: "medium"
 tags: ["testes", "vitest", "testing-library", "playwright", "e2e", "mocking", "react"]
-prerequisites: ["typescript", "closures"]
+prerequisites: ["typescript", "javascript-core"]
 keyTakeaways:
   - "Testing Library testa componentes como o usuário os usa — queries por role, label e text em vez de seletores CSS ou IDs internos"
   - "Vitest é o test runner padrão do ecossistema Vite: compatível com Jest API, ESM nativo, watch mode instantâneo e coverage embutido"
@@ -331,3 +331,13 @@ export default defineConfig({
 - **MSW (Mock Service Worker)** — mocking de API na camada de rede
 - **"Testing JavaScript"** (Kent C. Dodds) — curso completo sobre testing no ecossistema JS
 - **CS50 Web (Harvard)** — seção sobre testing e CI
+
+---
+
+## Referencias e Fontes
+
+- **Testing Library Documentation** — https://testing-library.com — Documentacao oficial da Testing Library com guias sobre queries, eventos, boas praticas e integracao com frameworks
+- **Jest Documentation** — https://jestjs.io — Documentacao oficial do Jest cobrindo configuracao, matchers, mocks, spies e integracao com projetos JavaScript e TypeScript
+- **Playwright Documentation** — https://playwright.dev — Documentacao oficial do Playwright para testes end-to-end com auto-waiting, trace viewer e suporte multi-browser
+- **MSW Documentation** — https://mswjs.io — Documentacao do Mock Service Worker para interceptacao de requisicoes na camada de rede, util para testes de integracao e desenvolvimento
+- **"Testing JavaScript"** — Kent C. Dodds — Curso completo e aprofundado sobre estrategias de teste no ecossistema JavaScript, desde testes unitarios ate E2E
