--- a/src/content/lessons/ia/agentes-de-ia.mdx
+++ b/src/content/lessons/ia/agentes-de-ia.mdx
@@ -2,7 +2,7 @@
 title: "Agentes de IA"
 description: "ReAct, tool use, RAG, tipos de memoria e sistemas multi-agente -- como LLMs deixam de ser chatbots e se tornam agentes autonomos"
 track: "ia"
-order: 7
+order: 5
 section: "LLMs & Aplicacoes"
 priority: "high"
 tags: ["agentes", "react", "tool-use", "rag", "multi-agent"]
@@ -567,3 +567,17 @@ Avaliacao:
 ```
 
 Agentes de IA representam a fronteira atual da aplicacao pratica de LLMs. A combinacao de raciocinio (LLM) + acao (ferramentas) + conhecimento (RAG) + persistencia (memoria) cria sistemas capazes de resolver tarefas que nenhum componente individual conseguiria sozinho. Nas proximas licoes, exploramos como otimizar a comunicacao com LLMs (prompt engineering) e como construir aplicacoes completas.
+
+---
+
+## Referencias e Fontes
+
+- **Deep Learning** -- Ian Goodfellow, Yoshua Bengio & Aaron Courville (2016). Fundamentos teoricos de redes neurais que sustentam os LLMs usados como nucleo de agentes. [deeplearningbook.org](https://www.deeplearningbook.org)
+- **Attention Is All You Need** -- Vaswani et al. (2017). A arquitetura Transformer que fundamenta os LLMs usados em agentes. [arxiv.org/abs/1706.03762](https://arxiv.org/abs/1706.03762)
+- **ReAct: Synergizing Reasoning and Acting in Language Models** -- Shunyu Yao et al. (2022). O paper que introduziu o pattern ReAct para agentes que alternam raciocinio e acao. [arxiv.org/abs/2210.03629](https://arxiv.org/abs/2210.03629)
+- **Anthropic Documentation** -- [docs.anthropic.com](https://docs.anthropic.com). Documentacao oficial para construcao de agentes com Claude, incluindo tool use, Agent SDK e orquestracao
+- **OpenAI Cookbook** -- [cookbook.openai.com](https://cookbook.openai.com). Guias praticos sobre function calling, agentes e patterns de integracao de LLMs
+- **LangChain Documentation** -- [docs.langchain.com](https://docs.langchain.com). Framework de referencia para construcao de chains, agentes e pipelines RAG com LLMs
+- **Andrej Karpathy's Neural Networks: Zero to Hero** -- [youtube.com/@andrejkarpathy](https://www.youtube.com/@andrejkarpathy). Contexto sobre como LLMs funcionam internamente -- essencial para entender as capacidades e limitacoes de agentes
+- **fast.ai** -- [fast.ai](https://www.fast.ai). Curso pratico de deep learning com exemplos de aplicacoes que combinam modelos com ferramentas externas
+- **Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks** -- Lewis et al. (2020). O paper original de RAG. [arxiv.org/abs/2005.11401](https://arxiv.org/abs/2005.11401)
