--- a/src/content/lessons/ia/ia-na-pratica.mdx
+++ b/src/content/lessons/ia/ia-na-pratica.mdx
@@ -1,8 +1,8 @@
 ---
-title: "IA na Pratica"
-description: "APIs de LLMs, SDKs, vector databases, embedding search, frameworks e construcao de uma aplicacao RAG completa em Node.js"
+title: "IA na Prática"
+description: "APIs de LLMs, SDKs, vector databases, embedding search, frameworks e construção de uma aplicação RAG completa em Node.js"
 track: "ia"
-order: 9
+order: 7
 section: "LLMs & Aplicacoes"
 priority: "high"
 tags: ["api", "openai", "anthropic", "vector-database", "langchain", "pratica"]
@@ -837,3 +837,18 @@ OTIMIZACAO:
 ## Resumo
 
 Construir aplicacoes de IA em producao envolve muito mais do que chamar uma API. O pipeline completo inclui: escolher o modelo e provider corretos, projetar o sistema de embeddings e busca vetorial, implementar RAG com chunking inteligente, adicionar caching e rate limiting, monitorar custos e qualidade e manter guardrails de seguranca. Os fundamentos cobertos nesta trilha -- desde a matematica de vetores ate prompt engineering -- convergem aqui na construcao de sistemas reais. A IA deixou de ser um topico academico: e uma ferramenta de engenharia de software que requer as mesmas disciplinas de qualquer sistema em producao.
+
+---
+
+## Referencias e Fontes
+
+- **Deep Learning** -- Ian Goodfellow, Yoshua Bengio & Aaron Courville (2016). Fundamentos teoricos que sustentam embeddings, busca vetorial e as arquiteturas por tras das APIs. [deeplearningbook.org](https://www.deeplearningbook.org)
+- **Attention Is All You Need** -- Vaswani et al. (2017). A arquitetura Transformer que fundamenta todos os modelos acessados via API nesta licao. [arxiv.org/abs/1706.03762](https://arxiv.org/abs/1706.03762)
+- **Anthropic Documentation** -- [docs.anthropic.com](https://docs.anthropic.com). Documentacao oficial da API do Claude, incluindo Messages API, tool use e streaming
+- **OpenAI API Documentation** -- [platform.openai.com/docs](https://platform.openai.com/docs). Documentacao oficial da API da OpenAI, incluindo Chat Completions, Embeddings e Function Calling
+- **OpenAI Cookbook** -- [cookbook.openai.com](https://cookbook.openai.com). Guias praticos de implementacao de RAG, embeddings, caching e patterns de producao
+- **Andrej Karpathy's Neural Networks: Zero to Hero** -- [youtube.com/@andrejkarpathy](https://www.youtube.com/@andrejkarpathy). Compreensao profunda de como LLMs funcionam, essencial para debugging e otimizacao de aplicacoes
+- **fast.ai** -- [fast.ai](https://www.fast.ai). Curso pratico que cobre deploy de modelos e integracao com aplicacoes
+- **LangChain Documentation** -- [docs.langchain.com](https://docs.langchain.com). Framework para construcao de aplicacoes com LLMs, incluindo chains, RAG e agentes
+- **Pinecone Documentation** -- [docs.pinecone.io](https://docs.pinecone.io). Documentacao do Pinecone (vector database managed) com guias de indexacao e busca vetorial
+- **Hugging Face Documentation** -- [huggingface.co/docs](https://huggingface.co/docs). Hub de modelos open-source, incluindo modelos de embedding, Transformers e pipelines de ML
