--- a/src/content/lessons/ia/matematica-essencial.mdx
+++ b/src/content/lessons/ia/matematica-essencial.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Matematica Essencial para IA"
-description: "Vetores, matrizes, derivadas, gradientes, probabilidade, teorema de Bayes e gradient descent -- a matematica que sustenta todo modelo de IA"
+title: "Matemática Essencial para IA"
+description: "Vetores, matrizes, derivadas, gradientes, probabilidade, teorema de Bayes e gradient descent — a matemática que sustenta todo modelo de IA"
 track: "ia"
-order: 3
+order: 2
 section: "Fundamentos Matematicos"
 priority: "high"
 tags: ["matematica", "algebra-linear", "calculo", "probabilidade", "gradient-descent"]
@@ -587,3 +587,16 @@ print(f"\nPesos aprendidos: bias = {w[0][0]:.4f}, peso = {w[1][0]:.4f}")
 ```
 
 Esses conceitos nao sao abstratos -- eles aparecem diretamente no codigo de qualquer framework de ML (PyTorch, TensorFlow, JAX). A diferenca entre usar uma API de ML como caixa-preta e entender o que esta acontecendo e exatamente este vocabulario matematico.
+
+---
+
+## Referencias e Fontes
+
+- **Deep Learning** -- Ian Goodfellow, Yoshua Bengio & Aaron Courville (2016). Capitulos 2-4 cobrem algebra linear, probabilidade e otimizacao numerica para deep learning. [deeplearningbook.org](https://www.deeplearningbook.org)
+- **Mathematics for Machine Learning** -- Marc Peter Deisenroth, A. Aldo Faisal & Cheng Soon Ong (2020). Tratamento rigoroso e acessivel de algebra linear, calculo e probabilidade aplicados a ML. [mml-book.github.io](https://mml-book.github.io)
+- **Attention Is All You Need** -- Vaswani et al. (2017). A matematica do mecanismo de atencao (dot product, softmax, projecoes lineares) e aplicacao direta dos conceitos desta licao. [arxiv.org/abs/1706.03762](https://arxiv.org/abs/1706.03762)
+- **Essence of Linear Algebra** -- 3Blue1Brown (Grant Sanderson). [youtube.com/playlist](https://www.youtube.com/playlist?list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab). Serie de videos com visualizacoes intuitivas de vetores, matrizes e transformacoes lineares
+- **Anthropic Documentation** -- [docs.anthropic.com](https://docs.anthropic.com). Documentacao tecnica que exemplifica como conceitos matematicos se traduzem em modelos de producao
+- **OpenAI Cookbook** -- [cookbook.openai.com](https://cookbook.openai.com). Exemplos praticos de embeddings, similaridade de cosseno e aplicacoes de algebra linear em ML
+- **Andrej Karpathy's Neural Networks: Zero to Hero** -- [youtube.com/@andrejkarpathy](https://www.youtube.com/@andrejkarpathy). Lectures que constroem redes neurais do zero, com enfase na matematica de gradientes e backpropagation
+- **fast.ai** -- [fast.ai](https://www.fast.ai). Curso que conecta a matematica teorica a implementacoes praticas em PyTorch
